<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="invalid_email">Email Invalid</string>
    <string name="empty_email">Insert Email</string>
    <string name="empty_password">Insert Password</string>
    <string name="password_length">Password must be more than 6 character</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="log_in">Log In</string>
    <string name="enter_email">Insert your email</string>
    <string name="enter_pass">Insert your password</string>
    <string name="link_register">Register Now!</string>
    <string name="cek_akun">Do not have an account</string>
    <string name="register">Register</string>
    <string name="punya_akun">Already have an account?</string>
    <string name="link_login">Log In Now!</string>
    <string name="home">Home</string>
    <string name="add_post">Add Story</string>
    <string name="profile">Profile</string>
    <string name="image">Picture</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="desc">Description</string>
    <string name="title_app">dicoding story app</string>
    <string name="title_home">MainActivity</string>
    <string name="title_dashboard">PodtActivity</string>
    <string name="title_profile">Profile Activity</string>
    <string name="title_profil">Profile Activity</string>
    <string name="logout">Log Out</string>
    <string name="add_story">Add Story</string>
    <string name="log_out">Log Out</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="post_desc">What is on your mind?</string>
    <string name="languange">Languange</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="register_title">REGISTER</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama">Masukkan nama lengkap</string>
    <string name="button_kamera">Button Kamera</string>
</resources>